fixed spacing for card and butons

--- a/styles/app.css
+++ b/styles/app.css
@@ -30,7 +30,7 @@ body{
     font-family: 'Oswald';
 }
 .creationMenu{
-    justify-content: space-between;
+    justify-content: space-evenly;
     background-color: white;
 }
 
@@ -71,6 +71,7 @@ body{
     background-image: url('../images/coworking.jpg');
     border: none;
     padding: 10px 20px 30px 20px;
+
 }
 .card{
     font-family: 'Oswald';
@@ -80,8 +81,8 @@ body{
     float: right;
     opacity: .9;
     width: 35%;
-    height: 85%;
     padding: 20px;
+    padding-bottom: 100px;
     background-color: rgb(247, 239, 239);
 }
 
